--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@ function MM_swapImage() { //v3.0
           </ul>
      </div>
      <br><br>
+     <div data-role="page" id="Principal" data-theme="a">
+	<div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" 		data-back-btn-theme="a">
+		<h2>Base de Datos Avanzada </h2>
+        </div>
      <div> 
        <!-- Start WOWSlider.com BODY section -->
 <div id="wowslider-container2">
